css/layout.css
/* CSS RESET */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    }
    
    img {
    width: 100%;
    height: auto;
    display: block;
    }

/* GLOBAL GRIDS */

.grid_12-12 {
    display: grid;
    grid-template-columns: repeat(12, 1fr);
    grid-template-rows: repeat(12, 1fr);
    height: 100vh;
    width: 100vw;
    gap: 2vw;
    overflow-x: hidden;
}

.grid_12-auto {
    display: grid;
    grid-template-columns: repeat(12, 1fr);
    grid-template-rows: repeat(12, auto);
    width: 100vw;
    gap: 2vw;
    overflow-x: hidden;
}

@media screen and (min-width: 1024px) {
    .grid_12-auto {
        height: 100vh;
    }
}

/* INDEX */
    
    /* image */
    #index_img {
        grid-column: 1 / span 12;
        grid-row: 1 / span 12;
        z-index: 0;
        object-fit: cover;
        align-self: stretch;
        aspect-ratio: 520/570;
    }

    @media screen and (min-width: 1024px) {
        #index_img {
            grid-column: 6 / span 7;
            grid-row: 2 / span 10;
            margin-top: 5vh;
        }
    }

    /* hero */
    .index_title {
        display: none;
    }

    .index_header_line_1 {
        grid-column: 1 / span 12;
        grid-row: 3;
        z-index: 1;
        margin-left: 0.5rem;
    }

    .index_header_line_2 {
        grid-column: 1 / span 12;
        grid-row: 4;
        z-index: 1;
        margin-left: 0.5rem;
    }

    .index_header_line_3 {
        grid-column: 1 / span 12;
        grid-row: 5;
        z-index: 1;
        text-align: end;
        margin-right: 0.5rem;
    }

    .index_header_line_4 {
        grid-column: 1 / span 12;
        grid-row: 6;
        z-index: 1;
        margin-left: 0.5rem;
    }

    .index_header_line_5 {
        grid-column: 1 / span 12;
        grid-row: 7;
        text-align: center;
        z-index: 1;
    }

    @media screen and (min-width:1024px) {
        .index_header_line_1, .index_header_line_2, .index_header_line_3, .index_header_line_4, .index_header_line_5  {
            display: none;
        }

        .index_title {
            display: flex;
            grid-column: 1 / span 10;
            grid-row: 2 / span 5;
            z-index: 1;
            margin-left: 10vw;
            margin-top: 5vh;
        }
    }

    /* button */
    #index_button {
        grid-column: 1 / span 12;
        grid-row: 8 / span 5;
        z-index: 1;
        margin-top: 5vh;
        justify-self: center;
    }

    @media screen and (min-width: 1024px) {
        #index_button {
            grid-column: 1 / span 6;
            grid-row: 10 / span 3;
            margin-top: 5vh;
        }

    @media screen and (min-width: 1024px) {
        #index_button {
            margin-top: 10vh;
        }
    }
    }

/* WELCOME PAGE */

    /* hero */
    .welcome_hero {
        grid-column: 2 / span 11;
        grid-row: 1;
        text-align: right;
        margin-top: 10vh;
        margin-right: 5vw;
        z-index: 1;

    }

    @media screen and (min-width:1024px) {
        .welcome_hero {
            grid-column: 1 / span 12;
            grid-row: 2;
            text-align: left;
            margin-left: 5vw;
        }
    }

    /* image */
    .welcome_img {
        grid-column: 1 / span 12;
        grid-row: 1 / span 4;
        z-index: 0;
        object-fit: cover;
    }

    @media screen and (min-width:1024px) {
        .welcome_img {
            grid-column: 7 / span 6;
            grid-row: 1 / span 10;
            align-self: stretch;
            margin-top: 10vh;
        }
    }

    /* text box */
    .text_box#welcome_box {
        grid-column: 1 / span 12;
        grid-row: 5 / span 6;
    }

        /* h2 */
        #welcome_h2 {
            text-align: center;
            margin-top: 2.5vh;
            margin-bottom: 2.5vh;
        }
    
    @media screen and (min-width:1024px) {
        .text_box#welcome_box {
            grid-column: 1 / span 6;
            grid-row: 3 / span 8;
            margin-left: 5vw;
            margin-right: 5vw;
        }
    }
    
        
    /* button */
    .container {
        grid-column: 1 / span 12;
        grid-row: 12;
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-template-rows: 1fr 1fr;
    }

    #welcome_button {
        grid-column: 1 / span 2;
        grid-row: 1;
        justify-self: center;
        margin-top: 5vh;
        margin-bottom: 5vh;
    }

    @media screen and (min-width:1024px) {
        .container {
            grid-column: 1 / span 6;
        }

        #welcome_button {
            grid-column: 1 / span 6;
            grid-row: 11 / span 2;
            place-self: center;
        }
    }

/* FILM PAGES */

        /* grid_1 image */
        .film_img_1 {
            grid-column: 1 / span 12;
            grid-row: 1 / span 12;
            z-index: 0;
            object-fit: cover;
            align-self: stretch;
            filter: brightness(60%);
        }

        /* grid_1 hero */
        .film_hero {
            grid-column: 1 / span 12;
            grid-row: 4;
            z-index: 1;
            text-align: right;
            margin-right: 5vw;
        }

        @media screen and (min-width:1024px) {
            .film_hero {
                grid-column: 1 / span 10;
                grid-row: 1 / span 12;
                place-self: center;
            }
        }

        /* grid_1 info box */
        .info_box {
            grid-column: 7 / span 6;
            grid-row: 7;
            z-index: 1;
            text-align: right;
            margin-right: 5vw;
        }

        @media screen and (min-width:1024px) {
            .info_box {
                grid-column: 11 / span 2;
                grid-row: 4 / span 6;
                margin-top: 6vh;
                margin-right: 0vw;
                padding: 2vw;
            }
        }

    /* grid_2 */

        /* grid_2 image */
        .film_img_2 {
            grid-column: 1 / span 12;
            grid-row: 1 / span 12;
            z-index: 0;
            object-fit: cover;
            align-self: stretch;
        }

        /* grid_2 quote */
        .film_quote {
            grid-column: 1 / span 12;
            grid-row: 1 / span 12;
            z-index: 1;
            text-align: center;
            place-self: center;
        }

    /* grid_3 */

        /* grid_3 image */
        .film_img_3 {
            grid-column: 1 / span 12;
            grid-row: 1;
            z-index: 0;
            width: 100vw;
            height: 40vh;
            object-fit: cover;
            align-self: stretch;
        }

        @media screen and (min-width:1024px) {
            .film_img_3 {
                grid-column: 7 / span 6;
                grid-row: 1 / span 12;
                width: 50vw;
                height: 80vh;
                place-self: center;
            }
        }

        /* grid_3 header */
        .film_article_header {
            grid-column: 1 / span 12;
            grid-row: 1;
            z-index: 1;
            text-align: center;
            margin-top: 10vh;
        }

        /* grid_3 article */
        .film_article {
            grid-column: 1 / span 12;
            grid-row: 2;
            margin-top: 5vh;
            margin-left: 1vw;
        }

        @media screen and (min-width:1024px) {
            .film_article {
                grid-column: 1 / span 6;
                grid-row: 2 / span 11;
                margin: 0vh 1vw 10vh 5vw;
                margin-top: 0vh;
                margin-bottom: 10vh;
                overflow: auto;
            }
        }

        /* grid_3 button */
        .film_button {
            grid-column: 1 / span 2;
            grid-row: 1 / span 2;
            justify-self: center;
            margin-top: 5vh;
        }

/* CONGRATS PAGE */

        /* hero */
        #congrats_hero {
            grid-column: 1 / span 12;
            grid-row: 2;
            place-self: center;
            z-index: 1;
            margin-top: 5vh;
        }

        @media screen and (min-width:1024px) {
            #congrats_hero {
                margin-top: 10vh;
            }
        }

        /* image */
        .congrats_img {
            grid-column: 7 / span 6;
            grid-row: 1 / span 12;
            object-fit: cover;
            align-self: stretch;
            place-self: center;
            height: 50vh;
            width: 50vw;
        }

        @media screen and (min-width:1024px) {
            .congrats_img {
                height: 60vh;
            }
        }

        /* h2 */
        .congrats_h2 {
            grid-column: 1 / span 6;
            grid-row: 3;
            text-align: center;
            margin-top: 5vh;
        }

        /* p */
        .congrats_p {
            grid-column: 1 / span 6;
            grid-row: 4;
            text-align: center;
            margin-top: 2.5vh;
        }

        /* button */
        #congrats_button {
            grid-column: 1 / span 12;
            grid-row: 5 / span 3;
            place-self: end center;
        }

        @media screen and (min-width:1024px) {
            #congrats_button {
                grid-column: 1 / span 6;
                grid-row: 5 / span 4;
            }
        }

/* SPECIFIC PAGE ADJUSTMENTS */
    
    /* images */
    #sw_img_1 {
        object-position: 60%;
    }

    @media screen and (min-width:1024px) {
        #sw_img_3 {
            object-position: 30% 40%;
        }
    }

    /* hero */
    @media screen and (min-width:1024px) {
        .film_hero#hero_center {
            text-align: center;
        }
    }

